# PVK-Engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  init.hpp  main.cpp
.github/workflows/: cmake.yml
definitions/: pbr.json  pbr_backup.json  simple.json  skybox.json
lib/: CMakeLists.txt
lib/application/: application.hpp
lib/buffer/: buffer.cpp  buffer.hpp  uniformBuffer.cpp  uniformBuffer.hpp
lib/camera/: camera.cpp  camera.hpp
lib/commandBuffer/: commandBuffer.hpp
lib/context/: context.cpp  context.hpp
lib/debug/: debug.hpp
lib/device/: logicalDevice.cpp  logicalDevice.hpp  physicalDevice.cpp  physicalDevice.hpp
lib/gltf/: Drawable.cpp  Drawable.h  GLTFAnimation.cpp  GLTFAnimation.hpp  GLTFLoader.cpp  GLTFLoader.hpp  GLTFMaterial.hpp  GLTFNode.cpp  GLTFNode.hpp  GLTFObject.cpp  GLTFObject.hpp  GLTFPrimitive.cpp  GLTFPrimitive.hpp  GLTFSkin.cpp  GLTFSkin.hpp
lib/gltf/loader/: GLTFLoaderAnimation.cpp  GLTFLoaderAnimation.hpp  GLTFLoaderIndex.hpp  GLTFLoaderMaterial.cpp  GLTFLoaderMaterial.hpp  GLTFLoaderNode.cpp  GLTFLoaderNode.hpp  GLTFLoaderPrimitive.cpp  GLTFLoaderPrimitive.hpp  GLTFLoaderVertex.cpp  GLTFLoaderVertex.hpp
lib/image/: image.cpp  image.hpp
lib/io/: io.cpp  io.hpp
lib/ktx/: CMakeLists.txt  KTXLoader.cpp  KTXLoader.hpp
lib/mesh/: mesh.cpp  mesh.hpp  vertex.cpp  vertex.hpp
lib/object/: gameObject.cpp  gameObject.hpp  object.cpp  object.hpp
lib/pipeline/: pipeline.cpp  pipeline.hpp  pipelineBuilder.cpp  pipelineBuilder.hpp  pipelineParser.hpp
lib/shader/: CMakeLists.txt  shader.cpp  shader.hpp
lib/texture/: texture.cpp  texture.hpp
lib/util/: util.cpp  util.hpp
shaders/: base.frag  base.frag.spv  base.vert  base.vert.spv  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv  simple.vert  skybox.frag  skybox.vert  skybox.vert.spv  skybox_new.frag  skybox_new.frag.spv  skybox_new.vert  skybox_new.vert.spv
test/: MockApplication.hpp  pvk_test.cpp
test/data/: test.json
