file(GLOB APPLICATION_SRC RELATIVE "application" "*.cpp")
file(GLOB APPLICATION_HEADERS RELATIVE "application" "*.hpp")

#add_subdirectory(application)
#add_subdirectory(buffer)
#add_subdirectory(camera)
#add_subdirectory(commandBuffer)
#add_subdirectory(context)
#add_subdirectory(debug)
#add_subdirectory(device)
#add_subdirectory(gltf)
#add_subdirectory(image)
#add_subdirectory(ktx)
#add_subdirectory(mesh)
#add_subdirectory(object)
#add_subdirectory(pipeline)
#add_subdirectory(shader)
#add_subdirectory(util)

add_library(lib STATIC ${APPLICATION_SRC} ${APPLICATION_HEADERS})
target_link_libraries(lib ${Vulkan_LIBRARY} ${XCB_LIBRARIES} ${WAYLAND_CLIENT_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT})
